src/snapshots/tuisage__ui__tests__snapshot_simple_flags_only.snap
---
source: src/ui.rs
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────┐
│ $ mytool                                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Flags ───────────────────────────────────────────────────────────────────────┐
│▶ ○ -v, --verbose                                               Verbose output│
│  ○ -f, --force                                                Force operation│
│  ○ --dry-run                                           Show what would happen│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Arguments ───────────────────────────────────────────────────────────────────┐
│  ● <input> = (empty)                                               Input file│
│  ○ [output] = (empty)                                             Output file│
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ⏎/Space toggle  ⌫ clear  ↑↓ navigate  ⇥ next  / filter  ^u reset  ^r run  q qui
